Fixed a couple UI flaws: (1) the backward/forward buttons of the image settings page were not aligned with the same buttons of the subsequent pages; (2) The text areas of the create job page had no padding on the right side.

--- a/css/default.css
+++ b/css/default.css
@@ -994,8 +994,9 @@ fieldset legend {
 }
 
 fieldset.report {
-    margin-top:10px;
-    margin-bottom:10px;
+  margin-top:10px;
+  margin-bottom:10px;
+  padding-right:15px;
 }
 
 fieldset.p {
@@ -1342,7 +1343,7 @@ option.default {
 }
 
 #report {
-    background: #ff9;
+  background: #ff9;
 }
 
 
