--- a/css/default_ie.css
+++ b/css/default_ie.css
@@ -1002,8 +1002,9 @@ fieldset legend {
 }
 
 fieldset.report {
-    margin-top:10px;
-    margin-bottom:10px;
+  margin-top:10px;
+  margin-bottom:10px;
+  padding-right:15px;
 }
 
 fieldset.p {
